--- a/Stylegpt.css
+++ b/Stylegpt.css
@@ -112,8 +112,8 @@ header .navigation li a:hover {
 
 .container .esquerda .text {
   position: relative;
-  max-width: 600px;
-  margin-right: 20px;
+  max-width: 500px;
+  margin-right: 40px;
  
  
 }
@@ -122,7 +122,7 @@ header .navigation li a:hover {
   color: #FFA500;
   margin-top: 0.1rem;
   font-size: 3.5rem;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   
   line-height: 2.5rem;
   font-weight: 700;
@@ -170,8 +170,15 @@ header .navigation li a:hover {
   align-items: center;
   padding-left: 4.8rem;
   padding-top: 2rem;
+  transition: 0.3s ease-in-out;
   
 }
+
+.social-media:hover {
+  color: #f0f0f0;
+
+}
+
 .esquerda {
   padding-bottom: 8rem;
   padding-top: 0.1rem;
@@ -231,3 +238,8 @@ header .navigation li a:hover {
   display: flex;
 
 }
+
+strong {
+  color: #FFA500;
+}
+
